Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3454

Memcached assertion: stored-value.hh:974: add_type_t HashTable::add(const Item&, bool, bool): Assertion `v->isDirty() == isDirty' failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 1.6.5.2
    • 1.6.5
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      "Port server memcached on node 'ns_1@ipaddress' exited with status 134. Restarting. Messages: Item was expired at load: test
      memcached: stored-value.hh:974: add_type_t HashTable::add(const Item&, bool, bool): Assertion `v->isDirty() == isDirty' failed."

      Logs are being gathered now.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            perry Perry Krug
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty