MB-3454: Fix to the assertion error in HashTable::add().

During the warmup period, if a given item was already soft-deleted or
expired in the HashTable, the item should be overwritten with
the new value and marked as clean.

Change-Id: Icafa820d6f2438c801715b2bdb566f6c186c95e9
Reviewed-on: http://review.membase.org/4780
Tested-by: Steve Yen <steve.yen@gmail.com>
Reviewed-by: Steve Yen <steve.yen@gmail.com>